--- a/.github/workflow/s3.yml
+++ b/.github/workflow/s3.yml
@@ -18,4 +18,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp --recursive --region ${{ secrets.AWS_REGION }} build s3://aws-s3-workflow
+          aws s3 cp --recursive --region ${{ secrets.AWS_REGION }} ./dist s3://aws-s3-workflow
